[package]
name = "my-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }

axum = "0.7.5"           
tower-http = { version = "0.5.2", features = ["cors"] } 
serde = { version = "1.0.197", features = ["derive"] } 
serde_json = "1.0.115" 

tonic = "0.11.0"        
prost = "0.12.3"         

dashmap = "6.1.0"       
moka = { version = "0.12.11", features = ["future"] } 
lazy_static = "1.4.0"   

mpchash = "2.0.10"     
config = "0.14.0"         
dotenv = "0.15.0"         

# tracing = "0.1.40"
# tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.59"  

log = "0.4.17"
log4rs = "1.1.1"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
